Fixed WIP PF2e theme toolbar spacing problem (issue #1648)

--- a/static/styles/user/color-scheme-ui.css
+++ b/static/styles/user/color-scheme-ui.css
@@ -41,7 +41,7 @@
 #controls .scene-control:hover,
 #controls .control-tool:hover {
     position: relative;
-    margin: auto 1px 10px;
+    margin: 0px 1px 10px;
     color: var(--tertiary);
     border: none;
     text-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5);
